# spice-segmenter

./: .copier-answers.yml  .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: pypi_release_and_docs.yml  test.yml
docs/: api_docs.md  serialization.md  tutorial
examples/: vectorization_strategies.py
notebooks/: test1.ipynb
src/spice_segmenter/: EventFinder.py  __init__.py  collections.py  component_selector.py  constant.py  constraint.py  constraint_optimizer.py  constraint_solver.py  coordinates.py  decorators.py  events.py  occultation.py  ops.py  property_base.py  quick.py  reflector.py  rings.py  search_reporter.py  serialization.py  spice_window.py  surface.py  trajectory_properties.py  types.py  unit_adaptor.py  utils.py  visibility.py
src/spice_segmenter/collections/: __init__.py  events.py  property_collections.py  quick_access.py  snapshot.py
src/spice_segmenter/computations/: __init__.py
src/spice_segmenter/constraint_solver/: __init__.py  constraint_solver.py
src/spice_segmenter/core/: __init__.py  constraints.py  property.py  property_decorator.py  property_metadata.py  registry.py  spice_window.py  time_segment.py  time_segments_collection.py
src/spice_segmenter/engines/: __init__.py  base.py  evaluator.py  spice_engine.py
src/spice_segmenter/io/: __init__.py  dsl.py  yaml_io.py
src/spice_segmenter/ops/: __init__.py  constant_values.py  constraint_operations.py  unit_adapter.py
src/spice_segmenter/optimizers/: __init__.py  constraint_optimizer.py
src/spice_segmenter/plotting/: __init__.py
src/spice_segmenter/properties/: __init__.py  component_selector.py  coordinates.py  geometry_properties.py  observation_properties.py  occultation_types.py  reflector_properties.py  ring_properties.py  surface_properties.py  visibility_properties.py
src/spice_segmenter/support/: __init__.py  config.py  context.py  decorators.py  search_reporter.py  serialization.py  spice_utilities.py  time_types.py
tests/: __init__.py  conftest.py  test_can_import.py  test_constraint_correctness.py  test_constraints.py  test_coordinates.py  test_engine_registry.py  test_error_handling.py  test_functional_distance.py  test_occultation_enum.py  test_optimizers.py  test_properties.py  test_property_decorator.py  test_ring_properties.py  test_segmenter.py  test_serialization.py  test_solver_bugs.py  test_solvers.py
tests/io/: test_io.py
tests/io/fixtures/: compound_constraint.yaml  mixed_properties.yaml  occultation_constraint.yaml  (+2 more)
tests/regression/: conftest.py  test_property_regression.py  test_solver_regression.py
tutorial/: 1. SimpleUsage - examplary code.ipynb  1. SimpleUsage.ipynb  2. Coordinates.ipynb  quick_setup.py
(+21 files in other folders)
